--- a/prepage.html
+++ b/prepage.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1"/>
           <link rel="icon" href="images/favicon.ico">
-            <link rel="stylesheet" href="styles.css">
+            <link rel="stylesheet" href="prepage.css">
             <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@300&display=swap" rel="stylesheet">
@@ -19,41 +19,9 @@
 
 <img class="frontimage1"src="images\main1.jpg" alt="">
 
-
-
-</div>
-
-
-
-
-<div class="middle">
   	<div id="text"></div><div id="cursor"></div>
+
 </div>
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
 
 
 
