--- a/signin.html
+++ b/signin.html
@@ -9,14 +9,14 @@
 </head>
 
 <body>
-  
+
 
   <div class="main">
     <p class="sign" align="center">Sign in</p>
     <form class="form1">
       <input class="un " type="text" align="center" placeholder="Username">
       <input class="pass" type="password" align="center" placeholder="Password">
-      <a class="submit" href="https://www.google.com/webhp?hl=en&sa=X&sqi=2&pjf=1&ved=0ahUKEwiGk8j8n4v2AhVfHbkGHQtpD6gQPAgI" align="center">Sign in</a>
+      <a class="submit" href="homepage.html" align="center">Sign in</a>
       <p class="forgot" align="center"><a href="#">Forgot Password?</p>
     </div>
 
