--- a/economies.html
+++ b/economies.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1"/>
       <link rel="icon" href="images/favicon.ico">
-        <link rel="stylesheet" href="homepage.css">
+        <link rel="stylesheet" href="economies.css">
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
         <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -24,6 +24,132 @@
         <i class="fa fa-bars"></i>
       </a>
     </div>
+
+        <img class="logo" src="images/logo.png" alt="">
+
+
+
+
+<div class="flexbox">
+
+  <div style="border-color: #34a4eb" class="card">
+
+
+    <img class="img1" src="images/nudge.png" alt="">
+
+
+    <div class="textbox">
+  <p class="headtwo">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Neque convallis a cras semper. Rutrum tellus pellentesque eu tincidunt tortor.</p>
+    </div>
+
+    <div class="btnone">
+      <p class="btntext">Learn</p>
+    </div>
+
+  </div>
+
+
+
+
+  <div style="border-color: #e6074d" class="card">
+
+
+    <img style="padding: 5px 0" class="img1" src="images/genex.png" alt="">
+
+
+    <div class="textbox">
+  <p class="headtwo">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Neque convallis a cras semper. Rutrum tellus pellentesque eu tincidunt tortor.</p>
+    </div>
+
+    <div style="border-color: #e6074d;" class="btnone">
+      <p style="color: #e6074d;" class="btntext">Learn</p>
+    </div>
+
+  </div>
+
+
+
+
+  <div style="border-color: white" class="card">
+
+
+    <img style="width: 120px;" class="img1" src="images/gig.png" alt="">
+
+
+    <div class="textbox">
+  <p class="headtwo">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Neque convallis a cras semper. Rutrum tellus pellentesque eu tincidunt tortor.</p>
+    </div>
+
+    <div style="border-color: white;" class="btnone">
+      <p style="color: white;" class="btntext">Learn</p>
+    </div>
+
+  </div>
+
+
+
+
+<div style="border-color: #009245" class="card">
+
+
+  <img style="padding: 10px 0;" class="img1" src="images/solutions.png" alt="">
+
+
+  <div class="textbox">
+<p class="headtwo">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Neque convallis a cras semper. Rutrum tellus pellentesque eu tincidunt tortor.</p>
+  </div>
+
+  <div style="border-color: #009245;" class="btnone">
+    <p style="color: #009245;" class="btntext">Learn</p>
+  </div>
+
+</div>
+
+
+
+
+<div style="border-color: #F7931E" class="card">
+
+
+  <img style="width:200px;" class="img1" src="images/digital.png" alt="">
+
+
+  <div class="textbox">
+<p class="headtwo">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Neque convallis a cras semper. Rutrum tellus pellentesque eu tincidunt tortor.</p>
+  </div>
+
+  <div style="border-color: #F7931E;" class="btnone">
+    <p style="color: #F7931E;" class="btntext">Learn</p>
+  </div>
+
+</div>
+
+
+
+
+
+
+
+
+
+
+</div>
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 
 
 
