--- a/homepage.html
+++ b/homepage.html
@@ -34,8 +34,8 @@
   <img class="proimg" src="images\adam.jpg" alt="">
 
   <div class="welcome">
-    <p  style="padding-bottom:15px;"class="textone">Adam <br> Craker </p>
-    <p class="texttwo">Job title: CEO <br>LOB: Everything <br>Line manager: N/A <br>Employee no: E0012 </p>
+    <p  style="padding-bottom:15px;"class="textone">Joe <br>Brown</p>
+    <p class="texttwo">Job title: Associate <br>LOB: Data platforms <br>Line manager: Lara van Heerden <br>Employee no: E0012 </p>
   </div>
 
 
