--- a/homepage.html
+++ b/homepage.html
@@ -31,7 +31,7 @@
 <div style="padding: 100px 0 100px 0;"class="flexbox">
 
 
-  <img class="proimg" src="images\adam.jpg" alt="">
+  <img class="proimg" src="images\man.jpg" alt="">
 
   <div class="welcome">
     <p  style="padding-bottom:15px;"class="textone">Joe <br>Brown</p>
