--- a/economies.html
+++ b/economies.html
@@ -42,9 +42,10 @@
   <p class="headtwo">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Neque convallis a cras semper. Rutrum tellus pellentesque eu tincidunt tortor.</p>
     </div>
 
-    <div class="btnone">
+<a href="nudge.html">    <div class="btnone">
       <p class="btntext">Learn</p>
-    </div>
+    </div></a>
+
 
   </div>
 
@@ -61,9 +62,10 @@
   <p class="headtwo">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Neque convallis a cras semper. Rutrum tellus pellentesque eu tincidunt tortor.</p>
     </div>
 
-    <div style="border-color: #e6074d;" class="btnone">
+<a href="nudge.html">    <div style="border-color: #e6074d;" class="btnone">
       <p style="color: #e6074d;" class="btntext">Learn</p>
-    </div>
+    </div></a>
+
 
   </div>
 
@@ -80,9 +82,10 @@
   <p class="headtwo">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Neque convallis a cras semper. Rutrum tellus pellentesque eu tincidunt tortor.</p>
     </div>
 
-    <div style="border-color: white;" class="btnone">
+<a href="nudge.html">    <div style="border-color: white;" class="btnone">
       <p style="color: white;" class="btntext">Learn</p>
-    </div>
+    </div></a>
+
 
   </div>
 
@@ -99,9 +102,10 @@
 <p class="headtwo">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Neque convallis a cras semper. Rutrum tellus pellentesque eu tincidunt tortor.</p>
   </div>
 
-  <div style="border-color: #009245;" class="btnone">
+<a href="nudge.html">  <div style="border-color: #009245;" class="btnone">
     <p style="color: #009245;" class="btntext">Learn</p>
-  </div>
+  </div></a>
+
 
 </div>
 
@@ -118,18 +122,32 @@
 <p class="headtwo">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Neque convallis a cras semper. Rutrum tellus pellentesque eu tincidunt tortor.</p>
   </div>
 
-  <div style="border-color: #F7931E;" class="btnone">
-    <p style="color: #F7931E;" class="btntext">Learn</p>
+  <a href="nudge.html">  <div style="border-color: #F7931E;" class="btnone">
+      <p style="color: #F7931E;" class="btntext">Learn</p>
+    </div></a>
+
+
+
+</div>
+
+
+
+
+
+
+<div style="border-color: #92D402" class="card">
+
+
+  <img style="width:200px;" class="img1" src="images/cobra.png" alt="">
+
+
+  <div class="textbox">
+<p class="headtwo">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Neque convallis a cras semper. Rutrum tellus pellentesque eu tincidunt tortor.</p>
   </div>
 
-</div>
-
-
-
-
-
-
-
+  <a href="nudge.html">  <div style="border-color: #92D402;" class="btnone">
+      <p style="color: #92D402;" class="btntext">Learn</p>
+    </div></a>
 
 
 
@@ -142,15 +160,7 @@
 
 
 
-
-
-
-
-
-
-
-
-
+</div>
 
 
 
