--- a/homepage.html
+++ b/homepage.html
@@ -52,6 +52,27 @@
   </div>
 
 
+
+  <div class="statsdiv">
+  <img class="stats" style="width:180px;" src="images\leave.png" alt="">
+  </div>
+
+  <div class="statsdiv">
+  <img class="stats" style="width:180px;" src="images\pro.png" alt="">
+  </div>
+
+
+  <div class="statsdiv">
+  <img class="stats" style="width:180px;" src="images\hours.png" alt="">
+  </div>
+
+
+
+
+
+
+
+
 </div>
 
 
