--- a/operations.html
+++ b/operations.html
@@ -16,8 +16,8 @@
 
     <div class="topnav" id="myTopnav">
       <a href="homepage.html">Home</a>
-      <a href="general.html" class="active" >General</a>
-      <a href="economies.html" >Economies</a>
+      <a href="general.html"class="active" >General</a>
+      <a href="economies.html"  >Economies</a>
       <a href="waylife.html" >Values</a>
       <a href="virtual.html" >Tour</a>
       <a href="javascript:void(0);" class="icon" onclick="myFunction()">
@@ -32,77 +32,57 @@
 
 <div class="flexbox">
 
+  <div style="border-color: white" class="card">
 
 
-
-
-  <div style="border-color: #D919E8" class="card">
-
-
-    <img style="width:200px;" class="img1" src="images/qa.png" alt="">
-
+<p class="headone">Sage 300</p>
 
     <div class="textbox">
   <p class="headtwo">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Neque convallis a cras semper. Rutrum tellus pellentesque eu tincidunt tortor.</p>
     </div>
 
-<a href="QA.html">    <div style="border-color: #D919E8;" class="btnone">
-      <p style="color: #D919E8;" class="btntext">ASK</p>
+<a href="#">    <div style="border-color: white;" class="btnone">
+      <p style="color: white;" class="btntext">walkthrough</p>
+
     </div></a>
 
-
+      <p class="headtwo">30min</p>
   </div>
 
 
 
 
-  <div style="border-color: #D919E8" class="card">
+  <div style="border-color: white" class="card">
 
 
-    <img style="" class="img1" src="images/for.png" alt="">
-
+<p class="headone">Sage 3X</p>
 
     <div class="textbox">
   <p class="headtwo">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Neque convallis a cras semper. Rutrum tellus pellentesque eu tincidunt tortor.</p>
     </div>
 
-<a href="formula.html">    <div style="border-color: #D919E8;" class="btnone">
-      <p style="color: #D919E8;" class="btntext">FORMULA</p>
+<a href="#">    <div style="border-color: white;" class="btnone">
+      <p style="color: white;" class="btntext">walkthrough</p>
     </div></a>
 
-
+      <p class="headtwo">1h20min</p>
   </div>
 
 
+  <div style="border-color: white" class="card">
 
 
-<div style="border-color: #D919E8" class="card">
+<p class="headone">CV portal</p>
 
+    <div class="textbox">
+  <p class="headtwo">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Neque convallis a cras semper. Rutrum tellus pellentesque eu tincidunt tortor.</p>
+    </div>
 
-  <img style="padding: 35px 0;" class="img1" src="images/sa.png" alt="">
+<a href="#">    <div style="border-color: white;" class="btnone">
+      <p style="color: white;" class="btntext">walkthrough</p>
+    </div></a>
 
-
-  <div class="textbox">
-<p class="headtwo">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Neque convallis a cras semper. Rutrum tellus pellentesque eu tincidunt tortor.</p>
-  </div>
-
-<a href="operations.html">  <div style="border-color: #D919E8;" class="btnone">
-    <p style="color: #D919E8;" class="btntext">VIEW</p>
-  </div></a>
-
-
-</div>
-
-
-
-
-
-
-
-
-
-
-
+      <p class="headtwo">1h</p>
 </div>
 
 
