chat added to header and page

--- a/operations.html
+++ b/operations.html
@@ -20,6 +20,7 @@
       <a href="economies.html"  >Economies</a>
       <a href="waylife.html" >Values</a>
       <a href="virtual.html" >Tour</a>
+      <a href="leader.html" >Social</a>
       <a href="javascript:void(0);" class="icon" onclick="myFunction()">
         <i class="fa fa-bars"></i>
       </a>
