--- a/leader.html
+++ b/leader.html
@@ -4,33 +4,59 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1"/>
       <link rel="icon" href="images/favicon.ico">
-        <link rel="stylesheet" href="QA.css">
+        <link rel="stylesheet" href="leader.css">
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
         <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@300&display=swap" rel="stylesheet">
-<title>Values</title>
+<title>Economies</title>
     <title></title>
   </head>
   <body>
 
     <div class="topnav" id="myTopnav">
       <a href="homepage.html">Home</a>
-      <a href="general.html" class="active" >General</a>
+      <a href="general.html"  >General</a>
       <a href="economies.html" >Economies</a>
       <a href="waylife.html" >Values</a>
       <a href="virtual.html" >Tour</a>
-      <a href="leader.html" >Social</a>
+      <a href="virtual.html" class="active" >Social</a>
       <a href="javascript:void(0);" class="icon" onclick="myFunction()">
         <i class="fa fa-bars"></i>
       </a>
     </div>
 
+        <img class="logo" src="images/logo.png" alt="">
 
-    <img class="logo" src="images/logo.png" alt="">
 
 
-<img class="formula" src="images/formula.png" alt="">
+
+<div class="flexbox">
+
+
+
+
+
+  <div style="border-color: #D919E8" class="card">
+    <img class="img1" src="images/leader.png" alt="">
+  </div>
+
+  <div style="border-color: #D919E8" class="card">
+    <img  class="img1" src="images/chat.png" alt="">
+  </div>
+
+
+
+
+
+
+
+
+
+
+</div>
+
+
 
 
 
