--- a/QA.html
+++ b/QA.html
@@ -32,7 +32,7 @@
 
 
     <div style="margin-top: 50px;"class="welcome">
-      <p  style="padding-bottom:15px;"class="textone">Freqently Ask Intelligent Questions <br>& Answers </p>
+      <p  style="padding-bottom:15px;"class="textone">Freqently Asked Intelligent Questions <br>& Answers </p>
 
       <p style="margin-top: 20px;" class="texttwo">Question <br>
         Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
