changes to chat

--- a/leader.html
+++ b/leader.html
@@ -41,7 +41,7 @@
     <img class="img1" src="images/leader.png" alt="">
   </div>
 
-  <div style="border-color: #D919E8" class="card">
+  <div class="card12">
     <img  class="img1" src="images/chat.png" alt="">
   </div>
 
