--- a/QA.html
+++ b/QA.html
@@ -31,14 +31,15 @@
 
 
 
+
     <div style="margin-top: 50px;"class="welcome">
-      <p  style="padding-bottom:15px;"class="textone">Freqently Asked Intelligent Questions <br>& Answers </p>
+      <p  style="padding-bottom:15px; color: #EC008C;"class="textone">Freqently Asked Intelligent Questions <br>& Answers </p>
 
-      <p style="margin-top: 20px;" class="texttwo">Question <br>
+      <p style="margin-top: 20px;" class="texttwo"> <b><i>Question</i></b>  <br>
         Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
        </p>
 
-       <p style="margin-top: 20px;" class="texttwo">Answer <br>
+       <p style="margin-top: 20px;" class="texttwo"><b><i>Answer</i></b> <br>
 Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Neque convallis a cras semper. Rutrum tellus pellentesque eu tincidunt tortor.    </p>
     </div>
 
@@ -47,22 +48,22 @@ Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor i
 
 
     <div style="margin-top: 100px;"class="welcome">
-      <p style="margin-top: 20px;" class="texttwo">Question <br>
+      <p style="margin-top: 20px;" class="texttwo"><b><i>Question</i></b>  <br>
         Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
        </p>
 
-       <p style="margin-top: 20px; " class="texttwo">Answer <br>
+       <p style="margin-top: 20px; " class="texttwo"><b><i>Answer</i></b>  <br>
 Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Neque convallis a cras semper. Rutrum tellus pellentesque eu tincidunt tortor.    </p>
     </div>
 
 <hr>
 
     <div style="margin-top: 100px;"class="welcome">
-      <p style="margin-top: 20px;" class="texttwo">Question <br>
+      <p style="margin-top: 20px;" class="texttwo"><b><i>Question</i></b>  <br>
         Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
        </p>
 
-       <p style="margin-top: 20px;" class="texttwo">Answer <br>
+       <p style="margin-top: 20px;" class="texttwo"><b><i>Answer</i></b> <br>
 Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Neque convallis a cras semper. Rutrum tellus pellentesque eu tincidunt tortor.    </p>
     </div>
 
@@ -70,11 +71,11 @@ Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor i
 
 
     <div style="margin-top: 100px;"class="welcome">
-      <p style="margin-top: 20px;" class="texttwo">Question <br>
+      <p style="margin-top: 20px;" class="texttwo"><b><i>Question</i></b>  <br>
         Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
        </p>
 
-       <p style="margin-top: 20px;" class="texttwo">Answer <br>
+       <p style="margin-top: 20px;" class="texttwo"><b><i>Answer</i></b> <br>
 Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Neque convallis a cras semper. Rutrum tellus pellentesque eu tincidunt tortor.    </p>
     </div>
 
