--- a/economies.html
+++ b/economies.html
@@ -33,7 +33,7 @@
 
 <div class="flexbox">
 
-  <div style="border-color: #34a4eb" class="card">
+  <div style="border-color: #34a4eb" class="card shake">
 
 
     <img class="img1" src="images/nudge.png" alt="">
@@ -53,7 +53,7 @@
 
 
 
-  <div style="border-color: #e6074d" class="card">
+  <div style="border-color: #e6074d" class="card shake">
 
 
     <img style="padding: 5px 0" class="img1" src="images/genex.png" alt="">
@@ -73,7 +73,7 @@
 
 
 
-  <div style="border-color: white" class="card">
+  <div style="border-color: white" class="card shake">
 
 
     <img style="width: 120px;" class="img1" src="images/gig.png" alt="">
@@ -93,7 +93,7 @@
 
 
 
-<div style="border-color: #009245" class="card">
+<div style="border-color: #009245" class="card shake">
 
 
   <img style="padding: 10px 0;" class="img1" src="images/solutions.png" alt="">
@@ -113,7 +113,7 @@
 
 
 
-<div style="border-color: #F7931E" class="card">
+<div style="border-color: #F7931E" class="card shake">
 
 
   <img style="width:200px;" class="img1" src="images/digital.png" alt="">
@@ -136,7 +136,7 @@
 
 
 
-<div style="border-color: #92D402" class="card">
+<div style="border-color: #92D402" class="card shake">
 
 
   <img style="width:200px;" class="img1" src="images/cobra.png" alt="">
